# AlgorithmicCourse

./: .gitignore
Lab1/: CMakeLists.txt  report.md
Lab1/src/: main.cpp  nearest_points.cpp  nearest_points.hpp  util.cpp  util.hpp
Lab2/: CMakeLists.txt  output.txt
Lab2/src/: Point.hpp  main.cpp  merge_sort.hpp  plot_points.ipynb  point_depths.cpp  point_depths.hpp  utils.h
Lab3/: CMakeLists.txt
Lab3/src/: DisjointSetUnion.cpp  DisjointSetUnion.hpp  Edge.hpp  kruskal.cpp  kruskal.hpp  main.cpp
